test/errors/assert/assert.yasl
# check that assert fails properly and with the correct line number

assert false
